--- a/styles/style.css
+++ b/styles/style.css
@@ -1,294 +1,293 @@
 .header {
-    display: grid;
-    padding: 92px 49px 92px 51px;
-    grid-template-columns: 1fr 148px 1fr;
-    place-items: center start;
-  }
+  display: grid;
+  padding: 92px 49px 92px 49px;
+  grid-template-columns: 1fr min-content 1fr;
+  place-items: center start;
+}
 .header__links-list {
-    display: flex;
-    justify-content: space-between;
-    gap: 32px;
-  } 
+  display: flex;
+  justify-content: space-between;
+  gap: 32px;
+}
 .header__links-list-item {
-    list-style: circle;
-  }
+  list-style: circle;
+}
 .header__link {
-    color: #000;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-underline-offset: 5px;
-  }
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-underline-offset: 5px;
+}
 .header__links-list-item_no-bullit {
-    list-style: none;
-  }
-  .header__link_active {
-    text-decoration: none;
-  }  
-  .header__logo {
-    display: block;
-    width: 148px;
-    height: 105px;
-    padding: 0 5px 6px;
-  }  
-  .address {
-    color: #000;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24.3px;
-    text-underline-offset: 5px;
-  }
-  .header__address {
-    justify-self: end;
-  } 
-  .cover {
-    background-image: url(../images/cover.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: relative;
-  }
-  .overlay {
-    position: absolute;
-    top:0;
-    left:0;
-    background: rgb(0 0 0 / 0.6);
-    width: 100%;
-    height: 100%;
-  }
-  .cover-title {
-    position: relative;
-    padding: 165px 50px 0 50px;
-    color: #fff;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 100%;
-    letter-spacing: 30px;
-    text-transform: uppercase;
-  }
-  .aligned-text {
-    display: block;
-    margin-bottom: 20px;
-  }
-  .aligned-text_center {
-    text-align: center;
-  }
+  list-style: none;
+}
+.header__link_active {
+  text-decoration: none;
+}
+.header__logo {
+  display: block;
+  width: 148px;
+  height: 105px;
+  padding: 0 5px 6px;
+}
+.address {
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+  text-underline-offset: 5px;
+}
+.header__address {
+  justify-self: end;
+}
+.cover {
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgb(0 0 0 / 0.6);
+  width: 100%;
+  height: 100%;
+}
+.cover-title {
+  position: relative;
+  padding: 165px 50px 0 50px;
+  color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+.aligned-text {
+  display: block;
+}
+.aligned-text_center {
+  text-align: center;
+}
 
-  .aligned-text_right {
-    text-align: right;
-  }
-  .letter-spacing-extended {
-    letter-spacing: 60px;
-  }  
-  .aligned-text_left {
-    line-height: 115%;
-  } 
-  .no-letter-spacing {
-    letter-spacing: 0;
-  }
-  .cover__description {
-    margin-top: 135px;
-    padding: 0px 50px 50px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 78px;
-  }
-  .cover__description-text {
-    position: relative;
-    color: #fff;
-    text-align: center;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
-    text-transform: uppercase;
-    word-spacing: 18px;
-  }
-  .bet-button {
-    position: relative;
-    background-color: transparent;
-    border: 1px solid #fff;
-    color: #fff;
-    text-align: center;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
-    padding: 12px 32px;
-  }
-  .lots {
-    padding: 180px 50px 0 50px;
-  }
-  .lots__heading {
-    padding-left: 40px;
-    padding-bottom: 27px;
-    color: #000;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-transform: uppercase;
-  }
-  .lots__card-list {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    gap: 25px;
-    flex-wrap: wrap;
-  }
+.aligned-text_right {
+  text-align: right;
+}
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+.aligned-text_left {
+  line-height: 115%;
+}
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+.cover__description {
+  margin-top: 135px;
+  padding: 0px 50px 50px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 78px;
+}
+.cover__description-text {
+  position: relative;
+  color: #fff;
+  text-align: center;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+.bet-button {
+  position: relative;
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  text-align: center;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  padding: 12px 32px;
+}
+.lots {
+  padding: 180px 50px 0 50px;
+}
+.lots__heading {
+  padding-left: 40px;
+  padding-bottom: 27px;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.lots__card-list {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  gap: 25px;
+  flex-wrap: wrap;
+}
 
-  .lots__card-list-item {
-    position: relative;
-    width: 430px;
-    min-height: 450px;
-    list-style: none;
-    flex-basis: auto;
-    flex-grow: 1;
-  }
-  .card-link {
-    position: relative;
-    display: block;
-    height: 100%;
-    text-decoration: none;
-  }
-  .card {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+.lots__card-list-item {
+  position: relative;
+  width: 430px;
+  min-height: 450px;
+  list-style: none;
+  flex-basis: auto;
+  flex-grow: 1;
+}
+.card-link {
+  position: relative;
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
-  .card_type_film {
-    background-image: url(../images/card-lot-01.jpg);
-  } 
-  .card_type_book {
-    background-image: url(../images/card-lot-02.jpg);
-  }
-  .card_type_picture {
-    background-image: url(../images/card-lot-03.jpg);
-  }
-  .card__title,
-  .card__text {
-    position: relative;
-  }
-  .card__title {
-    color: #fff;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
-    text-decoration-line: underline;
-    text-underline-offset: 3px;
-    text-transform: uppercase;
-    padding: 50px 40px 0 40px;
-  }
-  .card__text {
-    color: #fff;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
-    padding: 0 40px 50px 40px;
-  }
-  .lots__look-more-link {
-    display: block;
-    margin-top: 30px;
-    padding-left: 40px;
-    color: #000;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-underline-offset: 4px;
-  }
-  .about {
-    padding: 181px 50px 0 50px;
-    display: grid;
-    grid-template-columns: 430px 1fr;
-    place-items: start center;
-  }
-  .about__title {
-    padding: 100px 0 100px 25px;
-    color: #000;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-transform: uppercase;
-  }  
-  .about__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000;
-    border-radius: 100%;
-    width: 240px;
-    height: 240px;
-  }
-  .about__logo-image {
-    width: 148px;
-    height: 114px;
-  }
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
 
-  .about__text {
-    padding-left: 25px;
-    color: #000;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  .about__text-gap {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-  }
-  .footer {
-    padding: 180px 50px 90px 50px;
-    display: flex;
-    justify-content: space-between;
-  }
-  .footer__menu-list {
-    width: 149px;
-    list-style: none;
-  }
-  .footer__menu-list-item {
-    color: #000;
-    text-align: center;
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  .footer__menu-link_active {
-    text-decoration: none;
-  }
-  .footer__social-list {
-    width: 240px;
-    display: flex;
-    list-style: none;
-    justify-content: space-between;
-  }  
-  .footer__social-icon {
-    height: 48px;
-  }
+.card__title {
+  color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
+  padding: 50px 40px 0 40px;
+  position: relative;
+}
+.card__text {
+  color: #fff;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  padding: 0 40px 50px 40px;
+  position: relative;
+}
+.lots__look-more-link {
+  display: block;
+  margin-top: 30px;
+  padding-left: 40px;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-underline-offset: 4px;
+}
+.about {
+  padding: 181px 50px 0 50px;
+  display: grid;
+  grid-template-columns: 430px 1fr;
+  place-items: start center;
+}
+.about__title {
+  padding: 100px 0 100px 25px;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  border-radius: 50%;
+  width: 240px;
+  height: 240px;
+}
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__text {
+  padding-left: 25px;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.about__text-gap {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.footer {
+  padding: 180px 50px 90px 50px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__menu-list {
+  width: min-content;
+  list-style: none;
+}
+.footer__menu-list-item {
+  color: #000;
+  text-align: center;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.footer__menu-link_active {
+  text-decoration: none;
+}
+.footer__social-list {
+  width: min-content;
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+}
+.footer__social-icon {
+  height: 48px;
+  width: 48px;
+}
