--- a/styles/style.css
+++ b/styles/style.css
@@ -1,293 +1,366 @@
+.overlay {
+  position: absolute;
+  opacity: 0.6;
+  background: #000;
+  background-size: cover;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.line-link {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  text-decoration-thickness: 1px;
+}
+
+.no-line-link {
+  text-decoration: none;
+}
+
 .header {
   display: grid;
-  padding: 92px 49px 92px 49px;
-  grid-template-columns: 1fr min-content 1fr;
-  place-items: center start;
+  grid-template-columns: 1fr auto 1fr;
+  max-width: 1440px;
+  width: 100%;
+  margin: 90px auto;
+  padding-left: 51px;
+  padding-right: 49px;
 }
-.header__links-list {
+
+.header_links-list {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  padding-top: 44px;
   gap: 32px;
 }
-.header__links-list-item {
-  list-style: circle;
-}
-.header__link {
-  color: #000;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+
+.header_links-list-item,
+.footer_links-list-item {
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  text-underline-offset: 5px;
 }
-.header__links-list-item_no-bullit {
+
+.circle {
+  list-style: circle;
+}
+
+.no-circle {
   list-style: none;
 }
-.header__link_active {
-  text-decoration: none;
+
+.header-logo {
+  text-align: center;
+  padding-bottom: 4px;
 }
-.header__logo {
-  display: block;
-  width: 148px;
-  height: 105px;
-  padding: 0 5px 6px;
-}
-.address {
-  color: #000;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+.header-adress {
+  justify-self: end;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24.3px;
-  text-underline-offset: 5px;
+  line-height: 24.3px; /* 135% */
+  margin: 5px 0 7px 0;
 }
-.header__address {
-  justify-self: end;
+.header-logo img {
+  width: 148px;
+  height: 105px;
 }
-.cover {
-  background-image: url(../images/cover.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  position: relative;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgb(0 0 0 / 0.6);
-  width: 100%;
-  height: 100%;
-}
-.cover-title {
-  position: relative;
-  padding: 165px 50px 0 50px;
-  color: #fff;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
-  font-size: 100px;
+
+.adress {
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
   font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
-  letter-spacing: 30px;
-  text-transform: uppercase;
+  font-weight: 400;
+  line-height: 24.3px; /* 135% */
+  max-width: 240px;
 }
-.aligned-text {
-  display: block;
+
+.cover {
+  position: relative;
+  background-image: url("../images/cover.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  max-width: 1440px;
+  width: 100%;
+  min-height: 757px;
+  margin: 0 auto;
+  padding-top: 165px;
+}
+
+.cover-title {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 100px;
+  font-weight: 700;
+  font-style: normal;
+  text-transform: uppercase;
+  padding-left: 50px;
+  padding-right: 50px;
+  position: relative;
+  z-index: 2;
 }
 .aligned-text_center {
   text-align: center;
+  padding-top: 20px;
+  letter-spacing: 30px;
+  line-height: 100px;
+}
+.aligned-text_left {
+  line-height: 115px;
+  letter-spacing: 30px;
 }
 
 .aligned-text_right {
   text-align: right;
+  line-height: 100px;
+  letter-spacing: 30px;
+  padding-top: 20px;
 }
-.letter-spacing-extended {
+
+.letter-spacing-extende {
   letter-spacing: 60px;
 }
-.aligned-text_left {
-  line-height: 115%;
-}
+
 .no-letter-spacing {
   letter-spacing: 0;
 }
-.cover__description {
-  margin-top: 135px;
-  padding: 0px 50px 50px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 78px;
-}
-.cover__description-text {
+
+.cover_description {
   position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  padding-right: 50px;
+  padding-top: 135px;
   color: #fff;
-  text-align: center;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 50;
   line-height: 28px;
   text-transform: uppercase;
-  word-spacing: 18px;
 }
+
+.cover_description-text {
+  word-spacing: 17px;
+  padding-top: 10px;
+}
+
 .bet-button {
-  position: relative;
-  background-color: transparent;
+  background: transparent;
   border: 1px solid #fff;
   color: #fff;
   text-align: center;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  font-weight: 50;
+  line-height: 28px;
   text-transform: uppercase;
   padding: 12px 32px;
+  margin-left: 78px;
 }
+
 .lots {
-  padding: 180px 50px 0 50px;
+  margin: 180px auto 181px auto;
+  padding: 0 50px;
+  max-width: 1440px;
+  width: 100%;
+  min-height: 579px;
 }
-.lots__heading {
-  padding-left: 40px;
-  padding-bottom: 27px;
+
+.lots-title {
   color: #000;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
+  margin-left: 40px;
+  margin-bottom: 27px;
 }
-.lots__card-list {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  gap: 25px;
-  flex-wrap: wrap;
+.lots_card-list-item {
+  flex-grow: 1;
+  width: 430px;
 }
 
-.lots__card-list-item {
-  position: relative;
-  width: 430px;
-  min-height: 450px;
+.lots_card-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   list-style: none;
-  flex-basis: auto;
-  flex-grow: 1;
+  gap: 25px;
+  margin-bottom: 30px;
 }
-.card-link {
-  position: relative;
-  display: block;
-  height: 100%;
-  text-decoration: none;
-}
+
 .card {
-  height: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-size: cover;
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
+  min-height: 450px;
+  padding: 50px 40px;
+}
+.card-type-book {
+  background-image: url("../images/card-lot-02.jpg");
 }
 
-.card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
-}
-.card_type_book {
-  background-image: url(../images/card-lot-02.jpg);
-}
-.card_type_picture {
-  background-image: url(../images/card-lot-03.jpg);
+.card-type-picture {
+  background-image: url("../images/card-lot-03.jpg");
 }
 
-.card__title {
+.card-type-film {
+  background-image: url("../images/card-lot-01.jpg");
+}
+
+.card-title {
+  position: relative;
   color: #fff;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
-  line-height: 120%;
+  line-height: 26.4px;
   text-decoration-line: underline;
-  text-underline-offset: 3px;
   text-transform: uppercase;
-  padding: 50px 40px 0 40px;
-  position: relative;
+  z-index: 2;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
 }
-.card__text {
+
+.card-description {
+  position: relative;
   color: #fff;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
-  padding: 0 40px 50px 40px;
-  position: relative;
+  z-index: 2;
 }
-.lots__look-more-link {
-  display: block;
-  margin-top: 30px;
-  padding-left: 40px;
+
+.lots_look-more-link {
   color: #000;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  margin-left: 40px;
+  text-decoration-thickness: 1px;
   text-underline-offset: 4px;
 }
+
 .about {
-  padding: 181px 50px 0 50px;
   display: grid;
-  grid-template-columns: 430px 1fr;
-  place-items: start center;
+  grid-template-columns: auto 1fr;
+  column-gap: 25px;
+  max-width: 1440px;
+  width: 100%;
+  min-height: 487px;
+  margin: 0 auto;
+  padding: 0 50px;
 }
-.about__title {
-  padding: 100px 0 100px 25px;
+
+.about-logo {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  padding-left: 95px;
+  padding-right: 95px;
+}
+.about_logo-img {
+  padding: 63px 46px;
+}
+
+.about_background-logo {
+  background: #000;
+  border-radius: 150px;
+  width: 240px;
+  height: 240px;
+  text-align: center;
+}
+
+.about-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.about-title {
   color: #000;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
-}
-.about__logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #000;
-  border-radius: 50%;
-  width: 240px;
-  height: 240px;
-}
-.about__logo-image {
-  width: 148px;
-  height: 114px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
-.about__text {
-  padding-left: 25px;
+.about-text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
   color: #000;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
-.about__text-gap {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-}
+
 .footer {
-  padding: 180px 50px 90px 50px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  max-width: 1440px;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 180px auto 90px auto;
+  padding: 0 50px;
 }
-.footer__menu-list {
-  width: min-content;
-  list-style: none;
-}
-.footer__menu-list-item {
-  color: #000;
+.footer-menu {
   text-align: center;
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Raleway;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  padding-right: 30px;
+  padding-left: 32px;
 }
-.footer__menu-link_active {
-  text-decoration: none;
+.footer-adress {
+  text-align: left;
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px; /* 135% */
 }
-.footer__social-list {
-  width: min-content;
-  display: flex;
-  list-style: none;
-  justify-content: space-between;
-}
-.footer__social-icon {
+
+.footer_social-icon {
   height: 48px;
   width: 48px;
+}
+
+.footer_social-list {
+  display: flex;
+  justify-self: end;
+  flex-direction: row;
+  list-style: none;
+  gap: 45px;
+  padding-right: 3px;
 }
