--- a/styles/style.css
+++ b/styles/style.css
@@ -1,132 +1,100 @@
-.overlay {
-  position: absolute;
-  opacity: 0.6;
-  background: #000;
-  background-size: cover;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-
-.line-link {
-  text-decoration: underline;
-  text-underline-offset: 4px;
-  text-decoration-thickness: 1px;
-}
-
-.no-line-link {
-  text-decoration: none;
+.page {
+  margin: auto;
+  max-width: 1440px;
 }
 
 .header {
+  margin: 92px 49px 92px 51px;
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: 1fr 200px 1fr;
   max-width: 1440px;
-  width: 100%;
-  margin: 90px auto;
-  padding-left: 51px;
-  padding-right: 49px;
 }
 
-.header_links-list {
+.header__menu {
+  padding-top: 43px;
+}
+
+.header__links-list {
   display: flex;
-  flex-direction: row;
-  padding-top: 44px;
   gap: 32px;
-}
-
-.header_links-list-item,
-.footer_links-list-item {
-  font-family: Raleway, sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.circle {
+  justify-content: flex-start;
   list-style: circle;
-}
-
-.no-circle {
-  list-style: none;
-}
-
-.header-logo {
-  text-align: center;
-  padding-bottom: 4px;
-}
-.header-adress {
-  justify-self: end;
-  font-family: Raleway, sans-serif;
   font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24.3px; /* 135% */
-  margin: 5px 0 7px 0;
+  text-underline-position: under;
+  min-width: 300px;
 }
-.header-logo img {
-  width: 148px;
+
+.header__link {
+  min-width: 200px;
+}
+
+.header__list-item-no-bullit {
+  list-style-type: none;
+}
+
+.header__logo-image {
   height: 105px;
 }
 
-.adress {
-  font-family: Raleway, sans-serif;
+.address {
+  padding-top: 3px;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 24.3px; /* 135% */
+  line-height: 24.3px;
+  justify-self: self-end;
   max-width: 240px;
 }
 
-.cover {
-  position: relative;
-  background-image: url("../images/cover.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  max-width: 1440px;
-  width: 100%;
-  min-height: 757px;
-  margin: 0 auto;
-  padding-top: 165px;
+.address__links {
+  text-underline-position: under;
 }
 
-.cover-title {
-  display: flex;
-  flex-direction: column;
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-size: 100px;
-  font-weight: 700;
-  font-style: normal;
-  text-transform: uppercase;
-  padding-left: 50px;
-  padding-right: 50px;
+.cover {
+  background: url(../images/cover.jpg) center no-repeat;
+  background-size: cover;
   position: relative;
+  max-width: 1440px;
+  min-height: 757px;
+}
+
+.overlay {
+  background-color: rgb(0 0 0 / 0.6);
   z-index: 2;
+  position: absolute;
+  inset: 0;
 }
+
+.cover__title {
+  color: #fff;
+  font-size: 100px;
+  font-weight: bold;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  position: inherit;
+  z-index: 3;
+  padding: 161px 50px 135px 50px;
+}
+
+.aligned-text {
+  display: inline;
+  letter-spacing: 30px;
+  line-height: 115%;
+}
+
 .aligned-text_center {
+  display: block;
+  line-height: 100%;
+  padding: 20px 30px 20px 0;
   text-align: center;
-  padding-top: 20px;
-  letter-spacing: 30px;
-  line-height: 100px;
-}
-.aligned-text_left {
-  line-height: 115px;
-  letter-spacing: 30px;
 }
 
 .aligned-text_right {
+  display: block;
   text-align: right;
-  line-height: 100px;
-  letter-spacing: 30px;
-  padding-top: 20px;
+  line-height: 100%;
 }
 
-.letter-spacing-extende {
+.letter-spacing-extended {
   letter-spacing: 60px;
 }
 
@@ -134,233 +102,184 @@
   letter-spacing: 0;
 }
 
-.cover_description {
-  position: relative;
-  z-index: 2;
+.cover__description {
   display: flex;
-  flex-direction: row;
-  justify-content: end;
-  padding-right: 50px;
-  padding-top: 135px;
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 50;
-  line-height: 28px;
-  text-transform: uppercase;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 78px;
+  position: inherit;
+  z-index: 3;
+  padding: 0 50px 60px 0;
 }
 
-.cover_description-text {
-  word-spacing: 17px;
-  padding-top: 10px;
+.cover__description-text {
+  color: #fff;
+  font-size: 22px;
+  font-weight: normal;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
 }
 
 .bet-button {
-  background: transparent;
-  border: 1px solid #fff;
   color: #fff;
-  text-align: center;
-  font-family: Raleway, sans-serif;
+  background-color: transparent;
+  border: 1px solid #fff;
+  width: 257px;
   font-size: 22px;
-  font-style: normal;
-  font-weight: 50;
-  line-height: 28px;
   text-transform: uppercase;
   padding: 12px 32px;
-  margin-left: 78px;
 }
 
-.lots {
-  margin: 180px auto 181px auto;
-  padding: 0 50px;
-  max-width: 1440px;
-  width: 100%;
-  min-height: 579px;
+.bet-button:hover {
+  cursor: pointer;
 }
 
-.lots-title {
-  color: #000;
-  font-family: Raleway, sans-serif;
+.lots__heading {
   font-size: 40px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
+  font-weight: bold;
   text-transform: uppercase;
-  margin-left: 40px;
-  margin-bottom: 27px;
+  margin: 175px 0 27px 90px;
 }
-.lots_card-list-item {
-  flex-grow: 1;
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  padding-left: 50px;
+  padding-right: 50px;
+  list-style: none;
+}
+
+.lots__card-list-item {
+  min-height: 450px;
   width: 430px;
 }
 
-.lots_card-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  list-style: none;
-  gap: 25px;
-  margin-bottom: 30px;
-}
-
 .card {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  min-height: 450px;
+  flex-wrap: wrap;
   padding: 50px 40px;
-}
-.card-type-book {
-  background-image: url("../images/card-lot-02.jpg");
-}
-
-.card-type-picture {
-  background-image: url("../images/card-lot-03.jpg");
-}
-
-.card-type-film {
-  background-image: url("../images/card-lot-01.jpg");
-}
-
-.card-title {
+  z-index: 1;
   position: relative;
+  height: 100%;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-size: cover;
+}
+
+.card__title {
   color: #fff;
-  font-family: Raleway, sans-serif;
   font-size: 22px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 26.4px;
-  text-decoration-line: underline;
   text-transform: uppercase;
-  z-index: 2;
-  text-decoration-thickness: 1px;
-  text-underline-offset: 4px;
-}
-
-.card-description {
-  position: relative;
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
+  text-decoration: underline;
+  font-weight: bold;
   line-height: 120%;
-  z-index: 2;
+  z-index: 3;
 }
 
-.lots_look-more-link {
-  color: #000;
-  font-family: Raleway, sans-serif;
+.card__text {
+  color: #fff;
   font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin-left: 40px;
-  text-decoration-thickness: 1px;
-  text-underline-offset: 4px;
+  line-height: 120%;
+  z-index: 3;
+}
+
+.lots__look-more-link {
+  font-size: 20px;
+  margin: 30px 0 0 90px;
+  display: block;
 }
 
 .about {
   display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 25px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
+  grid-template-areas:
+    "about__logo about__title about__title"
+    ". about__text about__text";
   max-width: 1440px;
-  width: 100%;
-  min-height: 487px;
-  margin: 0 auto;
-  padding: 0 50px;
+  margin-top: 183px;
+  padding-left: 38px;
 }
 
-.about-logo {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  padding-left: 95px;
-  padding-right: 95px;
-}
-.about_logo-img {
-  padding: 63px 46px;
-}
-
-.about_background-logo {
-  background: #000;
-  border-radius: 150px;
+.about__logo {
+  background-color: #000;
   width: 240px;
   height: 240px;
-  text-align: center;
-}
-
-.about-column {
   display: flex;
-  flex-direction: column;
+  border-radius: 50%;
+  grid-area: about__logo;
+  align-self: center;
+  justify-self: center;
 }
 
-.about-title {
-  color: #000;
-  font-family: Raleway, sans-serif;
+.about__logo-image {
+  width: 148px;
+  align-items: center;
+  margin: auto;
+}
+
+.about__title {
+  grid-area: about__title;
   font-size: 40px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
   text-transform: uppercase;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  font-weight: bold;
+  align-self: center;
 }
 
-.about-text {
+.about__text {
+  grid-area: about__text;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   gap: 25px;
-  color: #000;
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  max-width: 885px;
 }
 
 .footer {
-  display: grid;
+  display: flex;
+  justify-content: space-between;
+  padding: 180px 50px 90px;
   max-width: 1440px;
-  width: 100%;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: 180px auto 90px auto;
-  padding: 0 50px;
-}
-.footer-menu {
-  text-align: center;
-  font-family: Raleway;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  padding-right: 30px;
-  padding-left: 32px;
-}
-.footer-adress {
-  text-align: left;
-  color: #000;
-  font-family: Raleway, sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24.3px; /* 135% */
 }
 
-.footer_social-icon {
+.footer__menu-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__social-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  gap: 47px;
+}
+
+.footer__menu-list-item {
+  font-size: 18px;
+}
+
+.footer__social-icon {
   height: 48px;
   width: 48px;
-}
-
-.footer_social-list {
-  display: flex;
-  justify-self: end;
-  flex-direction: row;
-  list-style: none;
-  gap: 45px;
-  padding-right: 3px;
 }
